fix scrolling on mobile

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ margin: 0;
 }
 
 .newsfeed{
-  display: inline-block;
+  display: block;
   width: 40%;
   height: 90%;
   float: right;
